tests/ui/frontmatter/frontmatter-whitespace-1.stderr
error: invalid preceding whitespace for frontmatter opening
  --> $DIR/frontmatter-whitespace-1.rs:1:1
   |
LL |   ---
   | ^^^^^
   |
note: frontmatter opening should not be preceded by whitespace
  --> $DIR/frontmatter-whitespace-1.rs:1:1
   |
LL |   ---
   | ^^

error: invalid preceding whitespace for frontmatter close
  --> $DIR/frontmatter-whitespace-1.rs:3:1
   |
LL |   ---
   | ^^^^^
   |
note: frontmatter close should not be preceded by whitespace
  --> $DIR/frontmatter-whitespace-1.rs:3:1
   |
LL |   ---
   | ^^

error: aborting due to 2 previous errors

