tests/ui/frontmatter/frontmatter-whitespace-1.rs
  ---
//~^ ERROR: invalid preceding whitespace for frontmatter opening
  ---
//~^ ERROR: invalid preceding whitespace for frontmatter close

#![feature(frontmatter)]

fn main() {}
